Fixed overlapping dropdowns

--- a/src/scss/dropdown.basicModal.scss
+++ b/src/scss/dropdown.basicModal.scss
@@ -65,15 +65,16 @@
 
 	.back {
 		display: none;
+		position: absolute;
+		top: -80px;
+		width: 100%;
 		transform: scaleY(0);
 		opacity: 0;
 		backface-visibility: hidden;
+		z-index: 1;
 	}
 
 	ul {
-		position: absolute;
-		top: -100px;
-		z-index: 1;
 		width: calc(100% - 28px);
 		padding: 10px 14px;
 		background-color: rgba(255, 255, 255, .98);
